--- a/Views/approvedGuest.html
+++ b/Views/approvedGuest.html
@@ -32,7 +32,7 @@
 
 
 
-<body background="new6.jpg" style="background-repeat: no-repeat;">
+<body background="bbb.jpg" style="background-repeat: no-repeat;background-attachment: fixed">
 
 	
 <nav class="navbar navbar-inverse " style="background-color:#00897b;color: white ;border-color: #00897b" id="navbar">
@@ -41,6 +41,8 @@
     <ul class="nav navbar-nav">
         <li><a  href="/" id="home" style="color: white">Home</a></li>
         <li><a  href="/" id="entry" style="color: white">Entry List</a></li>
+                 <li><a  href="/guestform" id="gstfrm" style="color: white">Guest Form</a></li>
+
          <li><a href="/contact" id="cntct" style="color: white">Contact</a></li>
         <li><a class="right" href="/auth" id="login" style="color:white"><i class="glyphicon glyphicon-log-in " style="color:white"></i> LogIn </a></li>
     </ul>
