--- a/Views/guestProfile.html
+++ b/Views/guestProfile.html
@@ -17,24 +17,16 @@
 
   <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
   <link rel="stylesheet" href="/Styles/guestProfile.css">
   <script type="text/javascript" src="/Script/guestprofile.js"></script>
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 </head>
 
 <body>
-
-<nav class="navbar navbar-inverse " style="background-color:#00897b;color: white ;border-color: #00897b" id="navbar">
- <div class="container-fluid">
-    
-    
-    </div>
-  
-</nav>
-
 
 
 <div id ="loading" >
@@ -47,8 +39,47 @@
     </div>
 
 </div>
+
+<nav class="navbar navbar-inverse " style="background-color:#00897b;color: white ;border-color: #00897b" id="navbar">
+ <div class="container-fluid">
+    
+    <ul class="nav navbar-nav">
+        <li><a  href="/" id="home" style="color: white">Home</a></li>
+        <li><a  href="/" id="entry" style="color: white">Entry List</a></li>
+        <li><a  href="/approvedguest" id="apprvd" style="color: white">Approved Guests</a></li>
+    </ul>
   
-<div class="container" style="border:10px #00897b ; margin-top: 5%">
+
+
+    
+      <div id="navbar" class="navbar-collapse collapse">
+         <div class="hidden-xs navbar-form navbar-right">
+            <a href="#search" class="search-form-tigger btn btn-success"  data-toggle="search-form" style="background-color: white"><i class="fa fa-search" style="color:#00897b" aria-hidden="true"></i></a>
+         </div>
+     <div class="visible-xs navbar-form navbar-right" style="border-color:transparent;">
+            <input type="text" name="search" class="search form-control" placeholder="Search..." style="color: blue;">
+         </div>
+         <!--/.navbar-collapse -->
+      </div>
+    </div>
+
+
+  
+</nav>
+
+<div class="search-form-wrapper">
+   <form class="search-form" id="" action="">
+      <div class="input-group">
+         <input type="text" name="search" class="search form-control" placeholder="Search...">
+         <span class="input-group-addon" id="basic-addon2"><i class="fa fa-search" aria-hidden="true"></i>
+         </span>
+         <span class="input-group-addon search-close" id="basic-addon2"><i class="fa fa-window-close" aria-hidden="true"></i>
+         </span>
+      </div>
+   </form>
+</div>
+  
+<div class="container" style=" margin-top: 5% ; margin-bottom: 10%">
     <div class="row" >
 
       <img src="logo.png" style="width: 20% ; margin-left: 40%">
@@ -119,15 +150,38 @@
 
 
 
-    <div class="row" style="margin-top: 5% ; margin-left: 10%">
-      <div class="col-sm-5 col-xs-6  "  > <input id="accpt" onclick="approve(1)" name="accpt" value="Accept" class="btn btn-success btn-lg"  ></div>
-      <div class="col-sm-5 col-xs-6"><input  id="rjct" name="rjct" value="Reject" onclick="approve(0)" class="btn btn-danger btn-lg" ></div>
+    <div class="row" style="margin-top: 5% ; margin-left: 30%">
+       <input id="accpt" style="width:60% ; margin-top: 5% ;" onclick="approve(1)" name="accpt" value="Approve" class="btn btn-success btn-lg"  >
 
+        <input id="stll" style="width:60% ; margin-top: 5% ;"  name="stll" value="Stall" class="btn btn-primary btn-lg"  >
 
+      <input  id="rjct"  style="width:60% ; margin-top: 5% ;" name="rjct" value="Reject" onclick="approve(0)" class="btn btn-danger btn-lg" >
+      
     </div>
 </div>
 
 
+<script type="text/javascript">
+  $( document ).ready(function() {
+  $('[data-toggle=search-form]').click(function() {
+      $('.search-form-wrapper').toggleClass('open');
+      $('.search-form-wrapper .search').focus();
+      $('html').toggleClass('search-form-open');
+    });
+    $('[data-toggle=search-form-close]').click(function() {
+      $('.search-form-wrapper').removeClass('open');
+      $('html').removeClass('search-form-open');
+    });
+  $('.search-form-wrapper .search').keypress(function( event ) {
+    if($(this).val() == "Search") $(this).val("");
+  });
+
+  $('.search-close').click(function(event) {
+    $('.search-form-wrapper').removeClass('open');
+    $('html').removeClass('search-form-open');
+  });
+});
+</script>
 
 </body>
 
