--- a/Views/Styles/guestProfile.css
+++ b/Views/Styles/guestProfile.css
@@ -12,6 +12,9 @@ body {
   color: #b9b9b9;
   background-color: #e3e3e3;
  background-repeat: no-repeat;
+ background-image: url(bbb.jpg);
+ background-repeat: no-repeat;
+ background-attachment: fixed;
 
 
 }
@@ -47,7 +50,7 @@ select option,
 select,
 button{
   width: 100%;
-  padding: 1em;
+  padding-right: 2px;
   line-height: 1.4;
   background-color: #f9f9f9;
   border: 1px solid #e5e5e5;
@@ -206,6 +209,7 @@ select option {
   border-radius: 4.2px;
  border-style: solid;
   box-shadow: 0px 3px 10px -2px rgba(0, 0, 0, 0.2);
+  border-color: #00897b !important;
 }
 
 .row {
@@ -252,61 +256,6 @@ select option {
 
 
 
-.file-upload {
-  //background-color: #ffffff;
-  width: 60%;
-  margin: 0 auto;
-  padding: 20px;
-}
-.file-upload img{
-  margin: 0;
-  color: #fff;
-  border: none;
-
-  border-radius: 4px;
-}
-.file-upload-btn {
-  width: 90%;
-  margin: 0;
-  color: #fff;
-  background: #1FB264;
-  border: none;
-  padding: 10px;
-  border-radius: 4px;
-  border-bottom: 4px solid #15824B;
-  transition: all .2s ease;
-  outline: none;
-  text-transform: uppercase;
-  font-weight: 700;
-}
-
-.file-upload-btn:hover {
-  background: #1AA059;
-  color: #ffffff;
-  transition: all .2s ease;
-  cursor: pointer;
-}
-
-.file-upload-btn:active {
-  border: 0;
-  transition: all .2s ease;
-}
-
-.file-upload-content {
-  display: none;
-  text-align: center;
-}
-
-.file-upload-input {
-  position: absolute;
-  margin: 0;
-  padding: 0;
-  width: 0;
-  height: 0;
-  outline: none;
-  opacity: 0;
-  cursor: pointer;
-}
      
 
      .search-form-wrapper {
@@ -321,70 +270,6 @@ select option {
 .search-form-wrapper.open {
     display: block;
 }
-
-
-.image-upload-wrap {
-  //margin-top: 20px;
-  //border: 4px dashed #1FB264;
-  position: relative;
-}
-.image-dropping,
-.image-upload-wrap:hover {
-  background-color: white;
-  //border: 4px dashed #ffffff;
-}
-
-.image-title-wrap {
-  padding: 0 15px 15px 15px;
-  color: #222;
-}
-
-.drag-text {
-  text-align: center;
-}
-
-.drag-text h3 {
-  font-weight: 100;
-  text-transform: uppercase;
-  color: #15824B;
-  padding: 60px 0;
-}
-
-.file-upload-image {
-  max-height: 200px;
-  max-width: 200px;
-  margin: auto;
-  padding: 20px;
-}
-
-.remove-image {
-  width: 200px;
-  margin: 0;
-  color: #fff;
-  background: #cd4535;
-  border: none;
-  padding: 10px;
-  border-radius: 4px;
-  border-bottom: 4px solid #b02818;
-  transition: all .2s ease;
-  outline: none;
-  text-transform: uppercase;
-  font-weight: 700;
-}
-
-.remove-image:hover {
-  background: #c13b2a;
-  color: #ffffff;
-  transition: all .2s ease;
-  cursor: pointer;
-}
-
-.remove-image:active {
-  border: 0;
-  transition: all .2s ease;
-}
-
-
 
 
 @media screen and (max-width: 800px) {
@@ -409,10 +294,7 @@ select option {
         color:#0645AD !important;
 
 }
-.btn input[type="submit"]:hover{
-  color:black;
-  background-color: black;
-}
+
 
 .tital{ font-size:16px; font-weight:500; color:black;}
    .bot-border{ border-bottom:1px #d9d9d9 solid;  margin:5px 0  5px 0}  
