--- a/Views/Styles/login.css
+++ b/Views/Styles/login.css
@@ -96,3 +96,15 @@ span.psw {
     color:#0645AD !important;
 
 }
+
+
+@media screen and (max-width: 800px) {
+    #navbar{
+      border-color: #00897b;
+        float:none;
+        display: block;
+    }
+   
+
+   
+}
