--- a/Views/ansar.html
+++ b/Views/ansar.html
@@ -2,33 +2,71 @@
 <html>
 <head>
     <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Ansar</title>
 
-    <link rel="stylesheet" href="bootstrap.min.css">
     <script src="css/bootstrap.min.js"></script>
+      <script src="/Script/bootstrap.min.js"></script>
+
 
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+
+  <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+
+
     <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="/Styles/ansar.css">
      <script type="text/javascript" src="/Script/logout.js" ></script>
 
 </head>
-<body background="new6.jpg">
+<body background="bbb.jpg">
 
 
-<div class="topnav" id="top-menu">
+<nav class="navbar navbar-inverse " style="background-color:#00897b;color: white ;border-color: #00897b" id="navbar">
+ <div class="container-fluid">
+    
+    <ul class="nav navbar-nav">
+        <li><a  href="/" id="home" style="color: white">Home</a></li>
+        <li><a  href="/" id="entry" style="color: white">Entry List</a></li>
+         <li><a  href="/guestform" id="gstfrm" style="color: white">Guest Form</a></li>
+           <li><a  href="/approvedguest" id="apprvd" style="color: white">Approved Guests</a></li>
+           <li><a href="#" onclick="logout()" id="logout" class="float-right fa fa-power-off" style="color: white;"></a></li>
+
+        
+    </ul> 
+
+    <div id="navbar" class="navbar-collapse collapse">
+         <div class="hidden-xs navbar-form navbar-right">
+            <a href="#search" class="search-form-tigger btn btn-success"  data-toggle="search-form" style="background-color: white"><i class="fa fa-search" style="color:#00897b" aria-hidden="true"></i></a>
+         </div>
+          <div class="visible-xs navbar-form navbar-right" style="border-color:transparent;">
+            <input type="text" name="search" class="search form-control" placeholder="Search..." style="color: blue;">
+         </div>
+         <!--/.navbar-collapse -->
+      </div> 
+    
+     
+  </div>
+
   
-    <ul>
-
-      <li><a href="/home" id="home">Home</a></li>
-       <!-- <li><a href="/gform" id="gst">Guest Form</a></li> -->
-       <li><a href="/contact" id="cntct">Contact</a></li>
-       <li><a href="#" onclick="logout()" id="logout" class="right fa fa-power-off" style="color: white;"></a></li>
-      
-       
-     </ul>
-
+</nav>
+<div class="search-form-wrapper">
+   <form class="search-form" id="" action="">
+      <div class="input-group">
+         <input type="text" name="search" class="search form-control" placeholder="Search...">
+         <span class="input-group-addon" id="basic-addon2"><i class="fa fa-search" aria-hidden="true"></i>
+         </span>
+         <span class="input-group-addon search-close" id="basic-addon2"><i class="fa fa-window-close" aria-hidden="true"></i>
+         </span>
+      </div>
+   </form>
 </div>
 
 
@@ -38,12 +76,36 @@
   <button type="submit" id="newentry"><i class="fa fa-chevron-circle-right"></i></button>
 </form>
 
-
-
-  <button class="button" id="entry" style="margin-top: 2% "><span>Entry List</span></button>
+<div class="w3-display-container">
+  <div class="w3-display-topmiddle">
+  <button class="button" id="entry" ><span>Entry List</span></button>
   <button class="button" id="gg"><span>Guest </span></button><!--ekhane kibhabe dekhbe-->
 
 </div>
+</div>
+
+<script type="text/javascript">
+  $( document ).ready(function() {
+  $('[data-toggle=search-form]').click(function() {
+      $('.search-form-wrapper').toggleClass('open');
+      $('.search-form-wrapper .search').focus();
+      $('html').toggleClass('search-form-open');
+    });
+    $('[data-toggle=search-form-close]').click(function() {
+      $('.search-form-wrapper').removeClass('open');
+      $('html').removeClass('search-form-open');
+    });
+  $('.search-form-wrapper .search').keypress(function( event ) {
+    if($(this).val() == "Search") $(this).val("");
+  });
+
+  $('.search-close').click(function(event) {
+    $('.search-form-wrapper').removeClass('open');
+    $('html').removeClass('search-form-open');
+  });
+});
+</script>
+
 
 </body>
 </html>
