--- a/Views/application.html
+++ b/Views/application.html
@@ -30,7 +30,7 @@
 
 </head>
 
-<body>
+<body background="bbb.jpg">
 
 <nav class="navbar navbar-inverse " style="background-color:#00897b;color: white ;border-color: #00897b" id="navbar">
  <div class="container-fluid">
@@ -74,7 +74,7 @@
 
 
   
-<div class="container" style="border-color: #00897b ; margin-top: 5%">
+<div class="container" style=" margin-top: 5%; margin-bottom: 15%">
   <form action="/students" method="post" enctype="multipart/form-data" >
     <div class="row" >
       <h4 style = "text-align:center ; "><font size="6">Registration Form</font></h4>
@@ -102,81 +102,81 @@
       </div>
 
 
-      <div class="input-group input-group-icon" style="width: 100%;color:   #424949 ;">
+      <div class="input-group input-group-icon" style="width: 100%;color:   #1b2631 ;">
         <input type="text" placeholder="Student's Name" name="stdname" required/>
         <div class="input-icon"><i class="fa fa-user" style="color: #00897b"></i></div>
       </div>
 
-      <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
+      <div class="input-group input-group-icon" style="width: 100%;color:   #1b2631">
         <input type="number" placeholder="Student's Phone" name="stdphn" required>
         <div class="input-icon"><i class="fa fa-phone" style="color: #00897b"></i></div>
       </div>
 
-      <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
+      <div class="input-group input-group-icon" style="width: 100%;color:   #1b2631">
          <input type="text" placeholder="Father's Name"  name="fatname" required>
         <div class="input-icon"><i class="fa fa-user" style="color: #00897b"></i></div>
       </div>
 
-      <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
+      <div class="input-group input-group-icon" style="width: 100%;color:   #1b2631">
          <input type="email" placeholder="Father's Email" name="fatmail">
         <div class="input-icon"><i class="fa fa-envelope " style="color: #00897b"></i></div>
       </div>
 
-      <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
+      <div class="input-group input-group-icon" style="width: 100%;color:   #1b2631">
           <input type="number" placeholder="Father's Phone" name="fatphn" required>
         <div class="input-icon"><i class="fa fa-phone" style="color: #00897b"></i></div>
       </div>
 
 
-      <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
+      <div class="input-group input-group-icon" style="width: 100%;color:   #1b2631">
                     <input type="text" placeholder="Mother's Name" name="motname" required>
         <div class="input-icon"><i class="fa fa-user" style="color: #00897b"></i></div>
       </div>
 
 
 
-      <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
+      <div class="input-group input-group-icon" style="width: 100%;color:   #1b2631">
                     <input type="email" placeholder="Mother's Email" name="motmail">
         <div class="input-icon"><i class="fa fa-envelope " style="color: #00897b"></i></div>
       </div>
 
-      <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
+      <div class="input-group input-group-icon" style="width: 100%;color:   #1b2631">
                     <input type="number" placeholder="Mother's Phone" name="motphn" required>
         <div class="input-icon"><i class="fa fa-phone" style="color: #00897b"></i></div>
       </div>
 
 
-      <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
+      <div class="input-group input-group-icon" style="width: 100%;color:   #1b2631">
                     <input type="text" placeholder="Present Address" name="prsntaddr" required>
         <div class="input-icon"><i class="fa fa-map-marker " style="color: #00897b"></i></div>
       </div>
 
-      <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
+      <div class="input-group input-group-icon" style="width: 100%;color:   #1b2631">
                     <input type="text" placeholder="Permanent Address" name="pmntaddr" required>
         <div class="input-icon"><i class="fa fa-map-marker " style="color: #00897b"></i></div>
       </div>
 
-      <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
+      <div class="input-group input-group-icon" style="width: 100%;color:   #1b2631">
                     <input type="text" placeholder="Course Name"  name="crse" required>
         <div class="input-icon"><i class="fa fa-graduation-cap  " style="color: #00897b"></i></div>
       </div>
 
-      <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
+      <div class="input-group input-group-icon" style="width: 100%;color:   #1b2631">
                     <input type="number" placeholder="Student ID"  name="stdid" required>
         <div class="input-icon"><i class="fa fa-address-book " style="color: #00897b"></i></div>
       </div>
 
-      <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
+      <div class="input-group input-group-icon" style="width: 100%;color:   #1b2631">
                     <input type="number" placeholder="Registration Number"  name="regno" required>
         <div class="input-icon"><i class="fa fa-address-book " style="color: #00897b"></i></div>
       </div>
 
-      <div class="input-group input-group-icon" style="width: 100%;color:   #424949"> 
+      <div class="input-group input-group-icon" style="width: 100%;color:   #1b2631"> 
                     <input type="text" placeholder="Academic Year" name="acyear" required>
         <div class="input-icon"><i class="fa fa-calendar " style="color: #00897b"></i></div>
       </div>
 
-      <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
+      <div class="input-group input-group-icon" style="width: 100%;color:   #1b2631">
                     <input type="number" placeholder="Level" name="level" required>
         <div class="input-icon"><i class="fa fa-bookmark " style="color: #00897b"></i></div>
       </div>
@@ -187,7 +187,7 @@
     <div class="row">
 
        
-        <div class="input-group" style="width: 100%;">
+        <div class="input-group" style="width: 100%;color:#707b7c">
           <input type="radio" name="gender" value="Male" id="gender-male"/>
           <label for="gender-male">Male</label>
           <input type="radio" name="gender" value="Female" id="gender-female"/>
@@ -198,7 +198,7 @@
 
     <div class="row">
 
-       <select class="matha" name="hall"  style="width: 100%;">
+       <select class="matha" name="hall"  style="width: 100%; color:#707b7c">
        <option value="Osmani Hall">Osmani Hall</option> <!-- -_- eivabe -->
         <option value="Extension A">Extension A</option>
         <option value="Extension B">Extension B</option>
@@ -211,27 +211,27 @@
     </div><br>
 
     <div class="row">
-      <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
+      <div class="input-group input-group-icon" style="width: 100%;color:   #1b2631">
                     <input type="text" placeholder="Room number"  name="room" required>
         <div class="input-icon"><i class="fa fa-building " style="color: #00897b"></i></div>
       </div>
 
-      <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
+      <div class="input-group input-group-icon" style="width: 100%;color:   #1b2631">
                     <input type="text" placeholder="Local Guardian's Name"  name="gdname" required>
         <div class="input-icon"><i class="fa fa-user" style="color: #00897b"></i></div>
       </div>
 
-      <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
+      <div class="input-group input-group-icon" style="width: 100%;color:   #1b2631">
                     <input type="email" placeholder="Local Guardian's Email" name="gdmail" required>
         <div class="input-icon"><i class="fa fa-envelope " style="color: #00897b"></i></div>
       </div>
 
-      <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
+      <div class="input-group input-group-icon" style="width: 100%;color:   #1b2631">
                     <input type="number" placeholder="Guardian's Phone" name="gdphn" required>
         <div class="input-icon"><i class="fa fa-phone" style="color: #00897b"></i></div>
       </div>
 
-      <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
+      <div class="input-group input-group-icon" style="width: 100%;color:   #1b2631">
                     <input type="text" placeholder="Local Guardian's Address" name="gdaddr" required>
         <div class="input-icon"><i class="fa fa-map-marker " style="color: #00897b"></i></div>
       </div>
