--- a/Views/Styles/application.css
+++ b/Views/Styles/application.css
@@ -11,6 +11,9 @@ body {
   font-size: 15px;
   color: #b9b9b9;
   background-color: #e3e3e3;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+
 
 }
 h4 {
@@ -179,10 +182,10 @@ select option {
   margin: 0em auto;
   background-color: #fff;
   border-radius: 4.2px;
- 
+ border-style: solid;
   box-shadow: 0px 3px 10px -2px rgba(0, 0, 0, 0.2);
+  border-color: #00897b !important;
 }
-
 .row {
   zoom: 1;
 }
