--- a/Views/studentProfile.html
+++ b/Views/studentProfile.html
@@ -75,7 +75,7 @@
       <img src="logo.png" style="width: 20% ; margin-left: 40%">
 
       <h4 style = "text-align:center ;margin-bottom: 15% "><font size="6">Student Profile</font></h4>
-      <img src = pp.jpg style="margin-left: 32% ;margin-top: -5% ; margin-bottom: 10%">
+      <img src = "/../uploads/abc.jpg" style="margin-left: 32% ;margin-top: -5% ; margin-bottom: 10%">
     </div>
 
       <div class="row" >
