--- a/Views/first page.html
+++ b/Views/first page.html
@@ -98,7 +98,7 @@
             <p> Deputy Provost</p>
             <p>Assistant Provost</p>
             <p>Hall Manager</p>
-            <p>Click here for more <a href="" style="color:#0080ff">detail</a></p>
+            <p>Click here for more <a href="/contact" style="color:#0080ff">detail</a></p>
             <!--<img src="provost.jpg" style="width:50%;height:50% ; radius:50%">
             <p>Brig Gen Md Khalil-Ur- Rahman</p>
             <p class="fa fa-envelope-o"> dswsir.mist@gmail.com</p><br>
