--- a/Views/Styles/table.css
+++ b/Views/Styles/table.css
@@ -1,187 +1,81 @@
 
-    ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-    }
-    /* Add a black background color to the top navigation */
-    .topnav {
-        background-color: #333;
-        overflow: hidden;
-    }
-
-
-    /* Style the links inside the navigation bar */
-    .topnav a {
-        float: left;
-        display: block;
-        color: #f2f2f2;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 17px;
-
-    }
-    
-	.topnav a.lgbtn{
-		
-		float: right;
-		 display: block;
-        color: #f2f2f2;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 17px;
-		
-	}
-
-
-    /* Hide the link that should open and close the topnav on small screens */
-    .topnav .icon {
-        display: none;
-    }
-    .topnav .current-menu-item a::before,
-    .topnav .current_page_item a::before {
-        content: "";
-        position: absolute;
-        z-index: 2;
-        left: 0;
-        right: 0;
-    }
-    .topnav li a:hover{
-        text-decoration: none;
-        border-bottom: 2px solid #15bf86;
-        -webkit-transition-property: right;
-        transition-property: right;
-        -webkit-transition-duration: 0.3s;
-        transition-duration: 0.3s;
-        -webkit-transition-timing-function: ease-out;
-        transition-timing-function: ease-out;
-    }
-    .topnav li a:hover {
-        opacity: 1 !important;
-    }
-    .topnav li a:hover:before {
-        right: 0;
-    }
-    .topnav  li li a:before {
-        bottom: 10%;
-    }
-
-    .topnav ul li a:hover:{
-        border-bottom: 2px solid red;
-    }
-    
-	
-    .right{
-        float: right !important;
-        display: block !important;
-        color: #f2f2f2;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 17px;
-
-
-    }
-	topnav .search:focus{
-		width : 30%;
-		background : white;
-	}
-	
-    .white{
-        color: white !important;
-    }
-	.search{
-		 background: #ededed url(https://static.tumblr.com/ftv85bp/MIXmud4tx/search-icon.png) no-repeat  center;
-		margin-top : 0.5%;
-		margin-right : 1%;
-		border: solid 1px;
-		border-radius : 50%;
-		width : 1px;
-		height : 1px;
-		cursor : pointer;
-		transition: all .5s;
-		background-color : inherit;
-		color : inherit;
-
-	}
-	.search:focus{
-		background : none;
-		width: 200px;
-		border-radius : 20%;
-		background-color: white;
-		border-color: white;
-		font-size : 15px;;
-		-webkit-border-radius: 10em;
-		-moz-border-radius: 10em;
-		background-color : white;
-		cursor : auto ;
-		border-width : 3px;
-		color : black;
-		outline : none;
-	}
      
 
-
-
 .tableDesign,th,td{
-		border : 2px solid black;
-		background:#e6f9ff  ;
-		//margin-left:300px;
-		border-collapse:collapse;
-		opacity:0.95;
-		margin:auto;
-		
-	}
-	.tableDesign{
-		width:100%;
-		margin:-1%;
-		
-		
-	}
-	.table-responsive{
-		overflow: hidden;
+        border : 2px solid black;
+        background:#e5f3f1  ;
+        /*//margin-left:300px;*/
+        border-collapse:collapse;
+        opacity:0.95;
+        margin:auto;
+        
+    }
+    .tableDesign{
+        width:100%;
+        margin:-1%;
+    }
+    .table-responsive{
+        overflow: hidden;
     overflow-x: auto;
     overflow-y: auto;
-	}
-	
-	th,td{
-		padding: 10px;
-		text-align: center;
-		font-size:15px;
-		color:black;
-	}
-	 td.left { 
-            text-align: left;
-               
+    }
+    
+    th,td{
+        padding: 10px;
+        text-align: center;
+        font-size:15px;
+        color:black;
+    }
+     td.left { 
+            text-align: left; 
            }
-	
-	th{
-		background:#333;
-		color:white;
-		font-size:17px;
+    
+    th{
+        background:#009688;
+        color:white;
+        font-size:17px;
 
-	}
+    }
 	h1{
 	font-size:30px;
 	text-align:center;
 	}
-.topnav {
-    background-color: #333;
-    overflow: hidden;
+
+
+
+.container-fluid ul li a:hover{
+   // background: black;
+    color:#0645AD !important;
+
 }
-.topnav h1{
-	color:white;
+.container-fluid  i:hover{
+   // background: black;
+    color:#0645AD !important;
+
+}
+
+
+@media screen and (max-width: 800px) {
+    #navbar{
+      border-color: #00897b;
+        float:none;
+        display: block;
+    }
+   
+
+   
 }
 
 
-.topnav input[type=button] {
-    float: right;
-    padding: 6px;
-    border: none;
-    margin-top: 8px;
-    margin-right: 16px;
-    font-size: 15px;
+  .search-form-wrapper {
+    display: none;
+    position: absolute;
+    left: 0;
+    right: 0;
+    padding: 20px 15px;
+    margin-top: -2%;
+    //background: url(/resources/images/misc/bg_search-open.png) right center no-repeat #f89d1c;
 }
-
+.search-form-wrapper.open {
+    display: block;
+}
