--- a/Views/studentProfile.html
+++ b/Views/studentProfile.html
@@ -75,7 +75,14 @@
       <img src="logo.png" style="width: 20% ; margin-left: 40%">
 
       <h4 style = "text-align:center ;margin-bottom: 15% "><font size="6">Student Profile</font></h4>
-      <img src = "/../uploads/abc.jpg" style="margin-left: 32% ;margin-top: -5% ; margin-bottom: 10%">
+
+      <div class="file-upload" id="image" name="" >
+        <div class="image-upload-wrap">
+          <img src="bbb.jpg" style="width: 90%;margin-top: -10% ;margin-left: 8%; margin-bottom: 15%">
+        </div>
+         
+      </div>
+
     </div>
 
       <div class="row" >
