--- a/Views/studentProfile.html
+++ b/Views/studentProfile.html
@@ -78,7 +78,7 @@
 
       <div class="file-upload" id="image" name="" >
         <div class="image-upload-wrap">
-          <img src="bbb.jpg" style="width: 90%;margin-top: -10% ;margin-left: 8%; margin-bottom: 15%">
+          <img src="https://wallpaperbrowse.com/media/images/dd170f37d84b3b21635f2ece8d416afa_large.jpeg" style="width: 90%;margin-top: -10% ;margin-left: 8%; margin-bottom: 15%">
         </div>
          
       </div>
