--- a/Views/studentProfile.html
+++ b/Views/studentProfile.html
@@ -22,7 +22,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
   <link rel="stylesheet" href="/Styles/studentProfile.css">
-
+  <script type="text/javascript" src="/Script/studentprofile.js"></script> 
 </head>
 
 <body>
@@ -78,7 +78,7 @@
 
       <div class="file-upload" id="image" name="" >
         <div class="image-upload-wrap">
-          <img src="https://wallpaperbrowse.com/media/images/dd170f37d84b3b21635f2ece8d416afa_large.jpeg" style="width: 90%;margin-top: -10% ;margin-left: 8%; margin-bottom: 15%">
+          <img src="" id="imgg" style="width: 90%;margin-top: -10% ;margin-left: 8%; margin-bottom: 15%">
         </div>
          
       </div>
