--- a/Views/Styles/ansar.css
+++ b/Views/Styles/ansar.css
@@ -1,8 +1,4 @@
-
-    
-
-
-    
+  
     .topnav .current-menu-item a::before,
     .topnav .current_page_item a::before {
         content: "";
@@ -16,7 +12,7 @@
    
 	
     
-     .button {
+.button {
   border-radius: 10px;
   background-color: #00897b;/*#f4511e;*/
   border: none;
@@ -60,7 +56,7 @@
    box-sizing: border-box;
 }
 
-form.example input[type=text] {
+div.example input[type=text] {
     padding: 10px;
     font-size: 17px;
     border: 1px solid grey;
@@ -71,7 +67,7 @@ form.example input[type=text] {
 
 }
 
-form.example button {
+div.example button {
     float: left;
     width: 20%;
     padding: 10px;
@@ -85,11 +81,11 @@ form.example button {
 
 }
 
-form.example button:hover {
+div.example button:hover {
     background: #15bf86;
 }
 
-form.example::after {
+div.example::after {
     content: "";
     clear: both;
     display: table;
