--- a/Views/table.html
+++ b/Views/table.html
@@ -90,7 +90,7 @@
    
 
 
-<div id="tableContainer" style="margin-left: 7%; margin-right: 3%; margin-top: 75px; " >
+<div id="tableContainer" style="margin-left: 7%; margin-right: 3%; margin-top: 75px; padding-bottom: 100px" >
  
 
 		<table class = "tableDesign">
@@ -112,7 +112,7 @@
 				</tr>
 			</thead>
 			<tbody id="mydata">
-				 <tr>
+				 <!-- <tr>
 					<td class="left">mila</td>
 					<td>cse</td>
 					<td>4</td>
@@ -122,7 +122,7 @@
 					<td>01712345678</td>
 					<td><button type="button" class="btn btn-primary" style="width:100% ; background:#00897b  ; color:white;" id="edt">Edit</button></td>
 
-				</tr>
+				</tr> -->
 				
 				<!-- <tr>
 					<td class="left">keya</td>
